--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
 <h1>Scribble of the Month!</h1>
-<iframe src="/july.png" title="This Month's Sketch"></iframe>
+<img src="/july.png" alt="This Month's Sketch"></img>
+<br/>
 <a href="/old.html">Previous scribbles</a></body>
 
 </html>
