--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <h1>Scribble of the Month!</h1>
-<img src="/july.png" alt="This Month's Sketch"></img>
+<img src="/july.png" alt="This Month's Sketch"/>
 <br/>
 <a href="/old.html">Previous scribbles</a></body>
 
