--- a/old.html
+++ b/old.html
@@ -1,1 +1,13 @@
-*Cricket noises*
+<!DOCTYPE html>
+<html lang="en-us">
+
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Archive</title>
+</head>
+
+<body>
+<h1>*Cricket Noises*</h1>
+
+</html>
